<resources>
    <string name="app_name">Goalify</string>
    <string name="default_client_id">534920273944-s7sinem22bqeqpmvq36mv38gb9nvrtle.apps.googleusercontent.com</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="title_rewards">Rewards</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_add_task">Add Task</string>
    <string name="title_home">Home</string>
    <string name="title_forum">Forum</string>
    <string name="title_profile">Profile</string>
    <string name="calendar">Calendrier</string>
    <string name="home">Accueil</string>
    <string name="forum">Forums</string>
    <string name="rewards">Récompenses</string>
    <string name="profile">Profile</string>
    <string name="forgot_password">Mot de passe oublié</string>
    <string name="enter_email">Entrez l\'email</string>
    <string name="email">Email</string>
    <string name="send_reset_link">send reset link</string>
    <string name="profile_image">Profile picture</string>
    <string name="save_objective">Save objective</string>
    <string name="edit_objective">edit objective</string>
    <string name="activer_les_notifications">Activer les notifications</string>
    <string name="activier_l_utilisation_de_l_ia">Activier l\'utilisation de l\'IA</string>
    <string name="logout">Se déconnecter</string>
    <string name="delete_account">Supprimer le compte</string>
    <string name="ssection_objectif">Objectif</string>
    <string name="update_profile">Mettre à jour le profil</string>
    <string name="name">Nom</string>
    <string name="define_objective">Définir votre objectif</string>
    <string name="section_params">Paramètres</string>
    <string name="back">back</string>
    <string name="title_propositions">Propositions Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>