<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ca.uqac.goalify.Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ca.uqac.goalify.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_add_task"
        android:name="ca.uqac.goalify.AddTask"
        android:label="@string/title_add_task"
        tools:layout="@layout/fragment_add_task" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="ca.uqac.goalify.Calendar"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar">
    </fragment>

    <fragment
        android:id="@+id/navigation_rewards"
        android:name="ca.uqac.goalify.ui.reward.RewardsFragment"
        android:label="@string/title_rewards"
        tools:layout="@layout/fragment_rewards">
    </fragment>

</navigation>